...
      children: [
        Text("Cancel", style: secondaryTextStyle(color: Colors.white)).onTap(() {
          finish(context);
          finish(context);
        }).paddingOnly(top: 4, bottom: 4),
        32.width,
        Text("OK", style: secondaryTextStyle(color: Colors.white)).paddingOnly(right: 8, top: 4, bottom: 4).onTap(() {
          MPDashboardScreen().launch(context);
        }),
      ],
    );
    AlertDialog alert = AlertDialog(
      backgroundColor: mpBottomBgColor,
...
